pour fenetre gauche fixe visible

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -320,6 +320,8 @@
         right: 20%;
         display: none;
         background-color: lightgrey;
+        max-height: 100%;
+        overflow-y: scroll;
 
         .blanche{
             background-color: white;
