--- a/CSS/style.css
+++ b/CSS/style.css
@@ -268,6 +268,8 @@
     right: 20%;
     display: none;
     background-color: lightgrey;
+    max-height: 100%;
+    overflow-y: scroll;
   }
   #noVisibleLeft .blanche {
     background-color: white;
